# lrclib-api-rs

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  types.rs
tests/: publish.rs  query.rs  query_id.rs  query_match.rs  search.rs
