[package]
name = "lrclib-api-rs"
version = "0.3.0"
edition = "2021"
authors = ["mokurin000"]
description = "LRCLib API Wrapper."
license = "MIT"

[dependencies]
http = "1.1.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.0"
url = "2.5.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1.0.132"
